--- a/rl-baselines-zoo.ipynb
+++ b/rl-baselines-zoo.ipynb
@@ -55,13 +55,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {},
         "colab_type": "code",
         "id": "SCjGikdT1DFy"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'rl-baselines3-zoo'...\n",
+            "remote: Enumerating objects: 4099, done.\u001b[K\n",
+            "remote: Counting objects: 100% (50/50), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (36/36), done.\u001b[K\n",
+            "remote: Total 4099 (delta 15), reused 28 (delta 7), pack-reused 4049\u001b[K\n",
+            "Receiving objects: 100% (4099/4099), 2.82 MiB | 11.83 MiB/s, done.\n",
+            "Resolving deltas: 100% (2659/2659), done.\n",
+            "Submodule 'rl-trained-agents' (https://github.com/DLR-RM/rl-trained-agents) registered for path 'rl-trained-agents'\n",
+            "Cloning into '/workspace/rl-colab-notebooks/rl-baselines3-zoo/rl-trained-agents'...\n",
+            "remote: Enumerating objects: 2231, done.        \n",
+            "remote: Counting objects: 100% (74/74), done.        \n",
+            "remote: Compressing objects: 100% (54/54), done.        \n",
+            "remote: Total 2231 (delta 20), reused 68 (delta 19), pack-reused 2157        \n",
+            "Receiving objects: 100% (2231/2231), 1.35 GiB | 30.18 MiB/s, done.\n",
+            "Resolving deltas: 100% (489/489), done.\n",
+            "Submodule path 'rl-trained-agents': checked out '1e2a45e5d06efd6cc15da6cf2d1939d72dcbdf87'\n"
+          ]
+        }
+      ],
       "source": [
         "!git clone --recursive https://github.com/DLR-RM/rl-baselines3-zoo"
       ]
@@ -341,8 +364,26 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.8.13 64-bit ('3.8.13')",
+      "language": "python",
       "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
+      }
     }
   },
   "nbformat": 4,
