--- a/rl-baselines-zoo.ipynb
+++ b/rl-baselines-zoo.ipynb
@@ -86,7 +86,7 @@
         }
       ],
       "source": [
-        "#!git clone --recursive https://github.com/DLR-RM/rl-baselines3-zoo"
+        "!git clone --recursive https://github.com/DLR-RM/rl-baselines3-zoo"
       ]
     },
     {
