--- a/scripts/parking_her.ipynb
+++ b/scripts/parking_her.ipynb
@@ -1,40 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "parking_her.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.5"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "language": "python",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU",
-    "pycharm": {
-      "stem_cell": {
-        "cell_type": "raw",
-        "source": [],
-        "metadata": {
-          "collapsed": false
-        }
-      }
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -53,6 +17,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "bzMSuJEOfviP",
         "pycharm": {
@@ -60,6 +25,118 @@
           "name": "#%%\n"
         }
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Collecting highway-env\n",
+            "  Downloading highway_env-1.6-py3-none-any.whl (104 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m104.2/104.2 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: pandas in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from highway-env) (1.5.0)\n",
+            "Requirement already satisfied: numpy in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from highway-env) (1.23.3)\n",
+            "Requirement already satisfied: scipy in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from highway-env) (1.8.1)\n",
+            "Collecting pygame>=2.0.2\n",
+            "  Downloading pygame-2.1.2-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (21.8 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.8/21.8 MB\u001b[0m \u001b[31m106.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+            "\u001b[?25hCollecting gym>=0.25\n",
+            "  Downloading gym-0.26.2.tar.gz (721 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m721.7/721.7 kB\u001b[0m \u001b[31m117.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
+            "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+            "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+            "\u001b[?25hRequirement already satisfied: matplotlib in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from highway-env) (3.6.0)\n",
+            "Collecting gym-notices>=0.0.4\n",
+            "  Downloading gym_notices-0.0.8-py3-none-any.whl (3.0 kB)\n",
+            "Requirement already satisfied: cloudpickle>=1.2.0 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from gym>=0.25->highway-env) (2.2.0)\n",
+            "Requirement already satisfied: importlib-metadata>=4.8.0 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from gym>=0.25->highway-env) (4.13.0)\n",
+            "Requirement already satisfied: pillow>=6.2.0 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->highway-env) (9.2.0)\n",
+            "Requirement already satisfied: pyparsing>=2.2.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->highway-env) (3.0.9)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->highway-env) (1.4.4)\n",
+            "Requirement already satisfied: cycler>=0.10 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->highway-env) (0.11.0)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->highway-env) (4.37.4)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->highway-env) (1.0.5)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->highway-env) (2.8.2)\n",
+            "Requirement already satisfied: packaging>=20.0 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->highway-env) (21.3)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from pandas->highway-env) (2022.4)\n",
+            "Requirement already satisfied: zipp>=0.5 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from importlib-metadata>=4.8.0->gym>=0.25->highway-env) (3.8.0)\n",
+            "Requirement already satisfied: six>=1.5 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.16.0)\n",
+            "Building wheels for collected packages: gym\n",
+            "  Building wheel for gym (pyproject.toml) ... \u001b[?25ldone\n",
+            "\u001b[?25h  Created wheel for gym: filename=gym-0.26.2-py3-none-any.whl size=827636 sha256=09a73a5be72b1f0d05c5236d8211497aa1e609ba61468903c3d337337f80f480\n",
+            "  Stored in directory: /home/gitpod/.cache/pip/wheels/17/79/65/7afedc162d858b02708a3b8f7a6dd5b1000dcd5b0f894f7cc1\n",
+            "Successfully built gym\n",
+            "Installing collected packages: gym-notices, pygame, gym, highway-env\n",
+            "  Attempting uninstall: gym\n",
+            "    Found existing installation: gym 0.21.0\n",
+            "    Uninstalling gym-0.21.0:\n",
+            "      Successfully uninstalled gym-0.21.0\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "stable-baselines3 1.6.1 requires gym==0.21, but you have gym 0.26.2 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0mSuccessfully installed gym-0.26.2 gym-notices-0.0.8 highway-env-1.6 pygame-2.1.2\n",
+            "Collecting git+https://github.com/DLR-RM/stable-baselines3\n",
+            "  Cloning https://github.com/DLR-RM/stable-baselines3 to /tmp/pip-req-build-lx1vgn36\n",
+            "  Running command git clone --filter=blob:none --quiet https://github.com/DLR-RM/stable-baselines3 /tmp/pip-req-build-lx1vgn36\n",
+            "  Resolved https://github.com/DLR-RM/stable-baselines3 to commit a697401e032dd4fecbbd4162755ddd707df980d3\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+            "\u001b[?25hCollecting gym==0.21\n",
+            "  Using cached gym-0.21.0-py3-none-any.whl\n",
+            "Requirement already satisfied: numpy in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from stable-baselines3==1.6.1) (1.23.3)\n",
+            "Requirement already satisfied: torch>=1.11 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from stable-baselines3==1.6.1) (1.12.1)\n",
+            "Requirement already satisfied: cloudpickle in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from stable-baselines3==1.6.1) (2.2.0)\n",
+            "Requirement already satisfied: pandas in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from stable-baselines3==1.6.1) (1.5.0)\n",
+            "Requirement already satisfied: matplotlib in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from stable-baselines3==1.6.1) (3.6.0)\n",
+            "Requirement already satisfied: typing-extensions in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from torch>=1.11->stable-baselines3==1.6.1) (4.3.0)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3==1.6.1) (1.0.5)\n",
+            "Requirement already satisfied: packaging>=20.0 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3==1.6.1) (21.3)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3==1.6.1) (1.4.4)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3==1.6.1) (2.8.2)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3==1.6.1) (4.37.4)\n",
+            "Requirement already satisfied: pillow>=6.2.0 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3==1.6.1) (9.2.0)\n",
+            "Requirement already satisfied: cycler>=0.10 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3==1.6.1) (0.11.0)\n",
+            "Requirement already satisfied: pyparsing>=2.2.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3==1.6.1) (3.0.9)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from pandas->stable-baselines3==1.6.1) (2022.4)\n",
+            "Requirement already satisfied: six>=1.5 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib->stable-baselines3==1.6.1) (1.16.0)\n",
+            "Installing collected packages: gym\n",
+            "  Attempting uninstall: gym\n",
+            "    Found existing installation: gym 0.26.2\n",
+            "    Uninstalling gym-0.26.2:\n",
+            "      Successfully uninstalled gym-0.26.2\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "highway-env 1.6 requires gym>=0.25, but you have gym 0.21.0 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0mSuccessfully installed gym-0.21.0\n",
+            "Requirement already satisfied: sb3-contrib in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (1.6.1)\n",
+            "Requirement already satisfied: stable-baselines3>=1.6.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from sb3-contrib) (1.6.1)\n",
+            "Requirement already satisfied: matplotlib in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from stable-baselines3>=1.6.1->sb3-contrib) (3.6.0)\n",
+            "Requirement already satisfied: pandas in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from stable-baselines3>=1.6.1->sb3-contrib) (1.5.0)\n",
+            "Requirement already satisfied: cloudpickle in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from stable-baselines3>=1.6.1->sb3-contrib) (2.2.0)\n",
+            "Requirement already satisfied: torch>=1.11 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from stable-baselines3>=1.6.1->sb3-contrib) (1.12.1)\n",
+            "Requirement already satisfied: gym==0.21 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from stable-baselines3>=1.6.1->sb3-contrib) (0.21.0)\n",
+            "Requirement already satisfied: numpy in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from stable-baselines3>=1.6.1->sb3-contrib) (1.23.3)\n",
+            "Requirement already satisfied: typing-extensions in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from torch>=1.11->stable-baselines3>=1.6.1->sb3-contrib) (4.3.0)\n",
+            "Requirement already satisfied: cycler>=0.10 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3>=1.6.1->sb3-contrib) (0.11.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3>=1.6.1->sb3-contrib) (1.4.4)\n",
+            "Requirement already satisfied: pyparsing>=2.2.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3>=1.6.1->sb3-contrib) (3.0.9)\n",
+            "Requirement already satisfied: pillow>=6.2.0 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3>=1.6.1->sb3-contrib) (9.2.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3>=1.6.1->sb3-contrib) (2.8.2)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3>=1.6.1->sb3-contrib) (4.37.4)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3>=1.6.1->sb3-contrib) (1.0.5)\n",
+            "Requirement already satisfied: packaging>=20.0 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from matplotlib->stable-baselines3>=1.6.1->sb3-contrib) (21.3)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from pandas->stable-baselines3>=1.6.1->sb3-contrib) (2022.4)\n",
+            "Requirement already satisfied: six>=1.5 in /home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib->stable-baselines3>=1.6.1->sb3-contrib) (1.16.0)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages/requests/__init__.py:109: RequestsDependencyWarning: urllib3 (1.26.12) or chardet (5.0.0)/charset_normalizer (2.0.12) doesn't match a supported version!\n",
+            "  warnings.warn(\n",
+            "/home/gitpod/.pyenv/versions/3.8.13/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "# Install environment and agent\n",
         "!pip install highway-env\n",
@@ -74,18 +151,16 @@
         "# Agent\n",
         "from stable_baselines3 import HerReplayBuffer, SAC\n",
         "from sb3_contrib import TQC"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
         "collapsed": false,
+        "id": "_wACJRDjqP-f",
         "pycharm": {
           "name": "#%% md\n"
-        },
-        "id": "_wACJRDjqP-f"
+        }
       },
       "source": [
         "## Training"
@@ -93,12 +168,34 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
+        "id": "Y5TOvonYqP-g",
         "pycharm": {
           "name": "#%% \n"
-        },
-        "id": "Y5TOvonYqP-g"
+        }
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Using cpu device\n",
+            "Wrapping the env with a `Monitor` wrapper\n",
+            "Wrapping the env in a DummyVecEnv.\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "<sb3_contrib.tqc.tqc.TQC at 0x7fd912e4cca0>"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "env = gym.make(\"parking-v0\")\n",
         "her_kwargs = dict(n_sampled_goal=4, goal_selection_strategy='future', online_sampling=True, max_episode_length=100)\n",
@@ -108,10 +205,8 @@
         "            learning_rate=1e-3,\n",
         "            gamma=0.95, batch_size=1024, tau=0.05,\n",
         "            policy_kwargs=dict(net_arch=[512, 512, 512]))\n",
-        "model.learn(int(5e4))\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "model.learn(int(5e2))\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -126,9 +221,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "so7yH4ucyB-3"
       },
+      "outputs": [],
       "source": [
         "!pip install gym pyvirtualdisplay\n",
         "!apt-get install -y xvfb python-opengl ffmpeg\n",
@@ -152,9 +249,7 @@
         "                      <source src=\"data:video/mp4;base64,{}\" type=\"video/mp4\" />\n",
         "                 </video>'''.format(mp4, video_b64.decode('ascii')))\n",
         "    ipythondisplay.display(ipythondisplay.HTML(data=\"<br>\".join(html)))\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -168,12 +263,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "xOcOP7Of18T2",
         "pycharm": {
           "name": "#%%\n"
         }
       },
+      "outputs": [],
       "source": [
         "env = gym.make(\"parking-v0\")\n",
         "env = RecordVideo(env, video_folder='./videos', episode_trigger=lambda e: True)\n",
@@ -185,20 +282,57 @@
         "        obs, reward, done, info = env.step(action)\n",
         "env.close()\n",
         "show_video()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "jh5h1ShBKYss"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "parking_her.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.8.13 64-bit ('3.8.13')",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.13"
+    },
+    "pycharm": {
+      "stem_cell": {
+        "cell_type": "raw",
+        "metadata": {
+          "collapsed": false
+        },
+        "source": []
+      }
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
